--- a/docs/MPM_errors_manuscript/Bibliography.bib
+++ b/docs/MPM_errors_manuscript/Bibliography.bib
@@ -502,3 +502,16 @@ year = {2002},
 abstract = {}, 
 keywords = {}}
 
+@Article{Lebreton2005,
+author = {Lebreton, J. D. }, 
+title = {{Age, stages, and the role of generation time in matrix models}}, 
+journal = {Ecol Model}, 
+volume = {188}, 
+pages = {22-29}, 
+year = {2005}, 
+abstract = {}, 
+doi = {10.1016/j.ecolmodel.2005.05.003}, 
+location = {}, 
+keywords = {}}
+
+
